<resources>
    <string name="answer1">جواب 1</string>
    <string name="answer2">جواب 2</string>
    <string name="answer3">جواب 3</string>
    <string name="answer4">جواب 4</string>
    <string name="answer_result">نتیجه جواب</string>
    <string name="app_name">MathG</string>
    <string name="app_title_name">بازی ریاضی</string>
    <string name="background_changer">تغییر به حالت روز/شب</string>
    <string name="countdown">60</string>
    <string name="current_level">1</string>
    <string name="equal">برابر</string>
    <string name="equation">1 + 1</string>
    <string name="equation1">1 + 2</string>
    <string name="equation2">2 + 1</string>
    <string name="false_button">False Button</string>
    <string name="final_score">امتیاز نهایی شما:</string>
    <string name="game_1">بازی مقایسه \n بالاترین امتیاز :\n بالاترین مرحله :</string>
    <string name="game_2">بازی صحیح و غلط \n بالاترین امتیاز :\n بالاترین مرحله :</string>
    <string name="game_3">بازی جور کردن \n بالاترین امتیاز :\n بالاترین مرحله :</string>
    <string name="game_4">بازی QUIZ \n بالاترین امتیاز :\n بالاترین مرحله :</string>
    <string name="game_over">Game Over</string>
    <string name="greater_than">Greater Than</string>
    <string name="health">Health</string>
    <string name="health_dialog">: جون</string>
    <string name="high_score">0</string>
    <string name="highest_level">0</string>
    <string name="highest_score">0</string>
    <string name="home">خانه</string>
    <string name="home_fragment">Home Page</string>
    <string name="remain_health">5</string>
    <string name="remaining_time">5</string>
    <string name="remaining_time_dialog">زمان باقیمانده تا برگشتن کارت ها:</string>
    <string name="score_dialog">: امتیاز</string>
    <string name="less_than">Less Than</string>
    <string name="level">Level</string>
    <string name="level_dialog">: مرحله</string>
    <string name="mini_game_1_fragment">Compare Game</string>
    <string name="mini_game_2_fragment">True and False Game</string>
    <string name="mini_game_3_fragment">Matching Game</string>
    <string name="mini_game_4_fragment">Quiz Game</string>
    <string name="play_again">Play Again</string>
    <string name="score">Score</string>
    <string name="setting">تنظیمات</string>
    <string name="setting_fragment">Setting Page</string>
    <string name="sign">Sign</string>
    <string name="start">START</string>
    <string name="timer">Timer</string>
    <string name="timer_dialog">: زمان</string>
    <string name="true_button">True Button</string>
    <string name="unknown">\?</string>
    <string name="unknown_equation">Unknown Equation</string>
</resources>