<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?attr/colorSecondary"
        android:contentDescription="@string/level"
        app:layout_constraintBottom_toTopOf="@id/tv_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_level" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?attr/colorSecondary"
        android:contentDescription="@string/score"
        app:layout_constraintBottom_toTopOf="@id/tv_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_score" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?attr/colorSecondary"
        android:contentDescription="@string/timer"
        app:layout_constraintBottom_toTopOf="@id/tv_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_timer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/current_level"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/img_level"
        app:layout_constraintStart_toEndOf="@+id/tv_level_dialog"
        app:layout_constraintTop_toBottomOf="@id/img_level" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_level_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/level_dialog"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_level"
        app:layout_constraintStart_toStartOf="@id/img_level"
        app:layout_constraintTop_toBottomOf="@+id/img_level" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/high_score"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/img_score"
        app:layout_constraintStart_toEndOf="@id/tv_score_dialog"
        app:layout_constraintTop_toBottomOf="@id/img_score" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_score_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/score_dialog"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_score"
        app:layout_constraintStart_toStartOf="@id/img_score"
        app:layout_constraintTop_toBottomOf="@+id/img_score" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/countdown"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/img_timer"
        app:layout_constraintStart_toEndOf="@id/tv_timer_dialog"
        app:layout_constraintTop_toBottomOf="@+id/img_timer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_timer_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/timer_dialog"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_timer"
        app:layout_constraintStart_toStartOf="@id/img_timer"
        app:layout_constraintTop_toBottomOf="@id/img_timer" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_score">

        <GridView
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:numColumns="4"
            tools:listitem="@layout/grid_items" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>